--- a/src/app/shared/components/tv-movie/tv-movie.component.html
+++ b/src/app/shared/components/tv-movie/tv-movie.component.html
@@ -1,4 +1,4 @@
-<a class="card" style="z-index: 0 !important;" >
+<a class="card" style="z-index: 0 !important;"  [routerLink]="'/tvdetails/'+tv.id">
   <img [src]="url+tv.poster_path" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">{{tv.name}}</h5>
