--- a/src/app/modules/persondetails/persondetails.component.html
+++ b/src/app/modules/persondetails/persondetails.component.html
@@ -1,15 +1,26 @@
-<div class="persondetails mt-5 pt-5">
+<div class="persondetails mt-5 pt-5" *ngIf="person">
   <div class="container text-center">
     <div class="row">
       <div class="col">
-        <img [src]="url+person.profile_path" alt="">
-        <h4>({{person.birthday}})</h4>
+        <img class="w-100" [src]="url+person?.profile_path" alt="">
+        <h4>({{person?.birthday}})</h4>
       </div>
-      <div class="col">
-        <h2>{{person.name}}  ({{person.known_for_department}})</h2>
-        <h4>{{person.place_of_birth}}</h4>
-        <p class="mt-3">{{person.biography}}</p>
+      <div class="col-12 col-md-6">
+        <div class="info">
+          <h2>{{person?.name}}  ({{person?.known_for_department}})</h2>
+        <h4>{{person?.place_of_birth}}</h4>
+        <p class="mt-3">{{person?.biography}}</p>
+        </div>
+        <div class="slider">
+          <h2 class="mb-5">Similar</h2>
+          <owl-carousel-o [options]="customOptions">
+            <ng-template carouselSlide *ngFor="let movie of movies">
+              <div class="slide"><app-movie [movie]="movie"></app-movie></div>
+            </ng-template>
+          </owl-carousel-o>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
