--- a/src/app/modules/tv-details/tv-details.component.scss
+++ b/src/app/modules/tv-details/tv-details.component.scss
@@ -1,6 +1,3 @@
-.movie-details{
-  background-color: #F0F0ED;
-}
 .banner{
   height: 40vh;
   margin-top: 61.17px;
@@ -40,8 +37,7 @@
   }
 }
 .information{
-  padding-top: 10rem;
-  padding-bottom:1rem ;
+  padding: 10rem;
   background-color: #F0F0ED;
 
   span{
