--- a/src/app/shared/components/person/person.component.html
+++ b/src/app/shared/components/person/person.component.html
@@ -1,4 +1,4 @@
-<a class="card" style="z-index: 0 !important;" >
+<a class="card" style="z-index: 0 !important;" [routerLink]="'/persondetails/'+person.id">
   <img [src]="url+person.profile_path" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">{{person.name}}</h5>
